--- a/sass/layouts/_grid.scss
+++ b/sass/layouts/_grid.scss
@@ -8,4 +8,5 @@
   flex-basis: calc((100% - 30px * var(--grid__item)) / var(--grid__item));
   margin-left: 30px;
   margin-top: 30px;
+  background-color: aquamarine;
 }
