--- a/sass/layouts/_team.scss
+++ b/sass/layouts/_team.scss
@@ -1,5 +1,4 @@
 .team {
-  --grid__item: 4;
   font-size: 16px;
   line-height: 1.172;
   text-align: center;
@@ -7,6 +6,15 @@
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
+  --grid__item: 1;
+
+  @media screen and (min-width: 768px) {
+    --grid__item: 2;
+  }
+
+  @media screen and (min-width: 1600px) {
+    --grid__item: 4;
+  }
 }
 .team--bg-color {
   background-color: var(--light-bg-color);
