--- a/css/main.css
+++ b/css/main.css
@@ -826,7 +826,7 @@ address {
 .feature__icon::before {
   display: block;
   content: "";
-  width: 270px;
+  width: 100%;
   height: 120px;
   background-color: var(--light-bg-color);
   border-radius: 4px;
@@ -874,13 +874,13 @@ address {
 }
 
 .team {
+  --grid__item: 1;
   font-size: 16px;
   line-height: 1.172;
   text-align: center;
   background-color: var(--dark-bg-text-color);
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
-  --grid__item: 1;
 }
 
 @media screen and (min-width: 768px) {
@@ -910,14 +910,26 @@ address {
 }
 
 .clients__item {
-  --grid__item: 6;
+  --grid__item: 2;
+}
+
+@media screen and (min-width: 768px) {
+  .clients__item {
+    --grid__item: 3;
+  }
+}
+
+@media screen and (min-width: 1600px) {
+  .clients__item {
+    --grid__item: 6;
+  }
 }
 
 .clients__view {
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 170px;
+  width: 100%;
   height: 90px;
   border-radius: 4px;
   border: 1px solid var(--social-icon);
@@ -1084,9 +1096,21 @@ address {
 }
 
 .projects {
-  --grid__item: 3;
+  --grid__item: 1;
   font-size: 16px;
   line-height: 1.875;
+}
+
+@media screen and (min-width: 768px) {
+  .projects {
+    --grid__item: 2;
+  }
+}
+
+@media screen and (min-width: 1600px) {
+  .projects {
+    --grid__item: 3;
+  }
 }
 
 .projects__title {
