--- a/sass/layouts/_clients.scss
+++ b/sass/layouts/_clients.scss
@@ -1,13 +1,21 @@
 .clients {
 }
 .clients__item {
-  --grid__item: 6;
+  --grid__item: 2;
+
+  @media screen and (min-width: 768px) {
+    --grid__item: 3;
+  }
+
+  @media screen and (min-width: 1600px) {
+    --grid__item: 6;
+  }
 }
 .clients__view {
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 170px;
+  width: 100%;
   height: 90px;
   border-radius: 4px;
   border: 1px solid var(--social-icon);
