--- a/sass/layouts/_feature.scss
+++ b/sass/layouts/_feature.scss
@@ -24,11 +24,12 @@
 .feature__icon::before {
   display: block;
   content: "";
-  width: 270px;
+  width: 100%;
   height: 120px;
   background-color: var(--light-bg-color);
   border-radius: 4px;
 }
+
 .feature__view {
   margin-top: 30px;
 }
