--- a/sass/main.scss
+++ b/sass/main.scss
@@ -7,6 +7,7 @@
 
 @import "./components/button";
 @import "./components/menu";
+@import "./components/mobile-menu";
 @import "./components/socials-icons";
 @import "./components/logo";
 @import "./components/modal";
