--- a/css/main.css
+++ b/css/main.css
@@ -383,7 +383,7 @@ address {
   }
 }
 
-@media screen and (min-width: 1600px) {
+@media screen and (min-width: 1200px) {
   .container {
     max-width: 1600px;
   }
@@ -419,6 +419,77 @@ address {
 
 .menu__link {
   position: relative;
+}
+
+@media screen and (max-width: 767.98px) {
+  .menu-desktop {
+    display: none;
+  }
+}
+
+.mobile-menu-btn {
+  position: absolute;
+  z-index: 105;
+  top: 10px;
+  right: 15px;
+  width: 40px;
+  height: 40px;
+  background-color: transparent;
+  border: none;
+}
+
+.icon-close {
+  display: none;
+}
+
+.is-open .icon-close {
+  display: block;
+}
+
+.is-open .icon-menu {
+  display: none;
+}
+
+.mobile-menu-icon {
+  width: 40px;
+  height: 40px;
+}
+
+.mobile-menu {
+  position: fixed;
+  top: 0;
+  right: -100%;
+  display: flex;
+  flex-direction: column;
+  z-index: 100;
+  width: 100%;
+  max-width: 480px;
+  height: 100vh;
+  padding-top: 48px;
+  padding-left: 40px;
+  background-color: #fff;
+  color: var(--logo-text-color);
+  transition: right 0.5s;
+}
+
+.mobile-menu.is-open {
+  right: 0;
+}
+
+.mobile-menu .menu {
+  flex-direction: column;
+  font-size: 40px;
+  font-weight: 500;
+}
+
+.mobile-menu .menu__item {
+  margin-bottom: 32px;
+}
+
+.mobile-overlay {
+  width: 100%;
+  height: 100vh;
+  background-color: black;
 }
 
 .social-icons {
@@ -687,7 +758,6 @@ address {
   flex-basis: calc((100% - 30px * var(--grid__item)) / var(--grid__item));
   margin-left: 30px;
   margin-top: 30px;
-  background-color: aquamarine;
 }
 
 .section {
@@ -729,6 +799,12 @@ address {
 .header-contacts {
   color: var(--main-text-color);
   display: inline-flex;
+}
+
+@media screen and (max-width: 767.98px) {
+  .header-contacts {
+    display: none;
+  }
 }
 
 .header-contacts__item:not(:last-child) {
@@ -807,7 +883,7 @@ address {
   }
 }
 
-@media screen and (min-width: 1600px) {
+@media screen and (min-width: 1200px) {
   .feature__content {
     --grid__item: 4;
   }
@@ -845,6 +921,12 @@ address {
 
 .feature__text {
   margin-bottom: 0;
+}
+
+@media screen and (max-width: 1199.98px) {
+  .gallery {
+    display: none;
+  }
 }
 
 .gallery__item {
@@ -889,7 +971,7 @@ address {
   }
 }
 
-@media screen and (min-width: 1600px) {
+@media screen and (min-width: 1200px) {
   .team {
     --grid__item: 4;
   }
@@ -919,7 +1001,7 @@ address {
   }
 }
 
-@media screen and (min-width: 1600px) {
+@media screen and (min-width: 1200px) {
   .clients__item {
     --grid__item: 6;
   }
@@ -958,9 +1040,21 @@ address {
 }
 
 .footer-list {
-  --grid__item: 4;
   display: flex;
   align-items: baseline;
+  --grid__item: 1;
+}
+
+@media screen and (min-width: 768px) {
+  .footer-list {
+    --grid__item: 2;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .footer-list {
+    --grid__item: 4;
+  }
 }
 
 .footer-list__title {
@@ -1052,6 +1146,13 @@ address {
   justify-content: space-between;
 }
 
+@media screen and (max-width: 1198.98px) {
+  .footer-form {
+    flex-wrap: wrap;
+    justify-content: space-between;
+  }
+}
+
 .filter {
   margin-top: auto;
   margin-bottom: auto;
@@ -1065,8 +1166,17 @@ address {
   padding-bottom: 50px;
 }
 
+@media screen and (max-width: 450px) {
+  .filter__content {
+    display: inline-flex;
+    flex-wrap: wrap;
+    justify-content: start;
+  }
+}
+
 .filter__button {
   width: auto;
+  height: 38px;
   padding: 6px 22px;
   font-weight: 500;
   font-size: 16px;
@@ -1107,7 +1217,7 @@ address {
   }
 }
 
-@media screen and (min-width: 1600px) {
+@media screen and (min-width: 1200px) {
   .projects {
     --grid__item: 3;
   }
