--- a/sass/layouts/_footer.scss
+++ b/sass/layouts/_footer.scss
@@ -3,9 +3,18 @@
   padding-bottom: 60px;
 }
 .footer-list {
-  --grid__item: 4;
   display: flex;
   align-items: baseline;
+
+  --grid__item: 1;
+
+  @media screen and (min-width: 768px) {
+    --grid__item: 2;
+  }
+
+  @media screen and (min-width: 1200px) {
+    --grid__item: 4;
+  }
 }
 .footer-list__title {
   margin-bottom: 20px;
@@ -89,4 +98,10 @@
 }
 .footer-button__text {
   justify-content: space-between;
+}
+@media screen and (max-width: 1198.98px) {
+  .footer-form {
+    flex-wrap: wrap;
+    justify-content: space-between;
+  }
 }
