--- a/sass/base/_container.scss
+++ b/sass/base/_container.scss
@@ -4,15 +4,15 @@
   margin-right: auto;
   margin-left: auto;
 
-  @media screen and (max-width: 480px) {
-    max-width: 320px;
+  @media screen and (min-width: 480px) {
+    max-width: 480px;
   }
 
-  @media screen and (max-width: 768px) {
+  @media screen and (min-width: 767.98px) {
     max-width: 768px;
   }
 
-  @media screen and (max-width: 1600px) {
+  @media screen and (min-width: 1200px) {
     max-width: 1200px;
   }
 }
