--- a/sass/components/_mobile-menu.scss
+++ b/sass/components/_mobile-menu.scss
@@ -29,6 +29,7 @@
     display: none;
   }
 }
+
 .mobile-menu-icon {
   width: 40px;
   height: 40px;
@@ -39,7 +40,8 @@
   top: 0;
   right: -100%;
   display: flex;
-  flex-direction: column;
+  flex-wrap: wrap;
+  align-content: space-between;
   z-index: 100;
   width: 100%;
   max-width: 480px;
@@ -63,19 +65,9 @@
   .menu__item:not(:last-child) {
     margin-bottom: 32px;
   }
-}
-.mobile-overlay {
-  width: 100%;
-  height: 100vh;
-}
-.menu__item {
-}
-.memu__link {
   .current::after {
-    display: none;
+    background-color: transparent;
   }
-}
-.menu-contacts {
 }
 
 .menu-contacts__phone {
@@ -92,8 +84,7 @@
 }
 
 .menu-social {
-  display: inline-flex;
-  // align-items: flex-end;
+  display: flex;
   margin-top: auto;
   font-size: 18px;
   line-height: 1.22;
@@ -104,19 +95,16 @@
 .menu-social__item {
   display: flex;
   justify-content: space-around;
-  // content: "";
-  // position: absolute;
-  // width: 22px;
-  // top: 726px;
 }
 .menu-social__item:not(:last-child) {
   margin-right: 20px;
-
+  position: relative;
   &::after {
     content: "";
     position: absolute;
-    // width: 22px;
-    // top: 726px;
+    top: 50%;
+    left: 100%;
+    width: 22px;
     border: 1px solid rgba(33, 33, 33, 0.2);
     transform: rotate(90deg);
   }
