--- a/sass/components/_modal-check.scss
+++ b/sass/components/_modal-check.scss
@@ -3,6 +3,11 @@
   display: inline-flex;
   flex-wrap: wrap;
   justify-content: center;
+
+  // @media screen and (min-width: 1200px) {
+  //   display: flex;
+  //   flex-direction: column;
+  // }
 }
 .modal-check__label {
   display: inline-block;
