--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -20,7 +20,7 @@
   left: 50%;
   transform: translate(-50%, -50%);
   width: 100%;
-  max-width: 530px;
+  max-width: 450px;
   min-height: 580px;
   padding: 40px 30px;
   border-radius: 4px;
@@ -29,6 +29,9 @@
 
   .is-hidden & {
     transform: translate(100%, 100%) scale(0.2);
+  }
+  @media screen and (min-width: 1200px) {
+    max-width: 530px;
   }
 }
 .modal__close {
