--- a/sass/layouts/_hero.scss
+++ b/sass/layouts/_hero.scss
@@ -5,9 +5,36 @@
   align-items: center;
   justify-content: center;
   background: rgba(47, 48, 58, 0.4);
-  background-image: url(../images/hero/bg.png);
+  background-image: url(../images/hero/mobile/bg-mobile.png);
   background-repeat: no-repeat;
   background-size: cover;
+
+  @media (min-device-pixel-ratio: 2),
+    (-webkit-min-device-pixel-ratio: 2),
+    (min-resolution: 192dpi),
+    (min-resolution: 2dppx) {
+    background-image: url(../images/hero/mobile/bg@2x-mobile.png);
+  }
+
+  @media screen and (min-width: 480px) {
+    background-image: url(../images/hero/tablet/bg-tablet.png);
+    @media (min-device-pixel-ratio: 2),
+      (-webkit-min-device-pixel-ratio: 2),
+      (min-resolution: 192dpi),
+      (min-resolution: 2dppx) {
+      background-image: url(../images/hero/tablet/bg@2x-tablet.png);
+    }
+  }
+
+  @media screen and (min-width: 768px) {
+    background-image: url(../images/hero/desktop/bg-desktop.png);
+    @media (min-device-pixel-ratio: 2),
+      (-webkit-min-device-pixel-ratio: 2),
+      (min-resolution: 192dpi),
+      (min-resolution: 2dppx) {
+      background-image: url(../images/hero/desktop/bg@2x-desktop.png);
+    }
+  }
 }
 .hero__content {
   max-width: 700px;
