--- a/sass/layouts/_section.scss
+++ b/sass/layouts/_section.scss
@@ -1,6 +1,11 @@
 .section {
   padding-top: 94px;
   padding-bottom: 94px;
+
+  @media screen and (max-width: 768px) {
+    padding-top: 60px;
+    padding-bottom: 60px;
+  }
 }
 .section__title {
   font-weight: 700;
